fix: navbarbottom detached on mobile + build

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,6 +25,7 @@
     position: absolute;
     top: 64px;
     z-index: 1000;
+    display: none;
 }
 
 .dropdown {
